--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
-  background-image: url("station.jpg");
-  background-size: cover;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, "Segoe UI", "Open Sans", "Helvetica Neue",
+    sans-serif;
   font-weight: bold;
   text-align: center;
+  color: #fd73cd;
 }
 
 h1 {
@@ -18,21 +17,35 @@ h2 {
   margin-bottom: 20px;
 }
 
+.all {
+  margin: auto;
+  max-width: 300px;
+  border-radius: 20px;
+  border: 5px solid #fd73cd;
+}
+
 button {
   border: none;
   padding-top: 10px;
   padding-bottom: 10px;
-  color: white;
+  color: #fd73cd;
   font-weight: bold;
-  width: 200px;
+  min-width: 100px;
   margin-bottom: 5px;
   border-radius: 5px;
 }
 
+.operations {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
 #increment-btn {
-  background: darkred;
+  background: #ffdd52;
 }
 
 #save-btn {
-  background: darkgreen;
+  background: #b6c750;
 }
